# transparancycomparison

./: CMakeLists.txt  readme.md
src/: boiler.cpp  main.cpp
